<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <com.w3engineers.ext.strom.application.ui.base.BaseToolBar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@android:color/white"
            android:theme="@style/ToolbarTheme"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:showHomeButton="true"
            app:titleTextColor="@color/title_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/toolbar_shadow"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ProgressBar
            android:id="@+id/appShare_progress"
            android:layout_width="@dimen/width_55"
            android:layout_height="@dimen/height_55"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/step_1_view"
                    android:layout_width="@dimen/width_50"
                    android:layout_height="@dimen/height_50"
                    android:layout_marginTop="@dimen/margin_30"
                    android:contentDescription="@string/qr_content_description"
                    android:src="@mipmap/step"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/text_1"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_17"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/step_1_view"
                    app:layout_constraintEnd_toEndOf="@+id/step_1_view"
                    app:layout_constraintStart_toStartOf="@+id/step_1_view" />

                <TextView
                    android:id="@+id/share_wifi_network"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/turn_on_hotspot"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintTop_toBottomOf="@+id/step_1_view" />

                <TextView
                    android:id="@+id/share_wifi_id_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:gravity="center"
                    android:text="@string/hotspot_id_pass"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintTop_toBottomOf="@+id/share_wifi_network" />

                <ImageView
                    android:id="@+id/step_2_view"
                    android:layout_width="@dimen/width_50"
                    android:layout_height="@dimen/height_50"
                    android:layout_marginTop="@dimen/margin_25"
                    android:contentDescription="@string/qr_content_description"
                    android:src="@mipmap/step"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/share_wifi_id_pass" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/text_2"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_17"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/step_2_view"
                    app:layout_constraintEnd_toEndOf="@+id/step_2_view"
                    app:layout_constraintStart_toStartOf="@+id/step_2_view" />

                <TextView
                    android:id="@+id/text_view_second_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/qr_code_text"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/step_2_view" />

                <ImageView
                    android:id="@+id/image_view_qr_code"
                    android:layout_width="@dimen/width_150"
                    android:layout_height="@dimen/height_150"
                    android:layout_marginTop="@dimen/margin_15"
                    android:contentDescription="@string/qr_content_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_second_text" />

                <View
                    android:id="@+id/view_1"
                    android:layout_width="@dimen/width_120"
                    android:layout_height="@dimen/padding_1"
                    android:background="@color/colorAccent"
                    app:layout_constraintBottom_toTopOf="@+id/image_view_or"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_view_or" />

                <ImageView
                    android:id="@+id/image_view_or"
                    android:layout_width="@dimen/width_40"
                    android:layout_height="@dimen/height_40"
                    android:layout_marginTop="@dimen/margin_15"
                    android:background="@drawable/rounded_or_box"
                    android:padding="@dimen/padding_5"
                    app:layout_constraintEnd_toEndOf="@+id/view_1"
                    app:layout_constraintStart_toStartOf="@+id/view_1"
                    app:layout_constraintTop_toBottomOf="@+id/image_view_qr_code" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/text_or"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/image_view_or"
                    app:layout_constraintEnd_toEndOf="@+id/image_view_or"
                    app:layout_constraintStart_toStartOf="@+id/image_view_or"
                    app:layout_constraintTop_toTopOf="@+id/image_view_or" />

                <TextView
                    android:id="@+id/text_view_3rd_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/enter_url_text"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_view_or" />

                <TextView
                    android:id="@+id/text_view_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_40"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/url_loading"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_3rd_text" />

            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</layout>